site: staking, governance and cross-link updates

--- a/scalus-site/content/onboarding/for-cardano-developers.mdx
+++ b/scalus-site/content/onboarding/for-cardano-developers.mdx
@@ -1,6 +1,6 @@
 ---
-title: Scalus for Cardano Developers
-description: Complete onboarding guide for Cardano developers. Learn Scala 3 fundamentals, debug validators with IDE breakpoints, and build type-safe smart contracts with professional tooling.
+title: Scalus for Cardano Developers - Learn Scala 3 & Build Type-Safe Validators
+description: Complete onboarding guide for Cardano developers learning Scalus. Master Scala 3 fundamentals, debug Plutus validators with IDE breakpoints, build type-safe smart contracts, and create complete off-chain transaction builders. 4-6 hours to proficiency.
 sidebarTitle: For Cardano Developers
 ---
 
@@ -114,7 +114,16 @@ You'll learn:
 - [ ] **[Compiling Validators](/docs/smart-contract/compiling)** - Generate UPLC, create blueprints, attach to transactions
 - [ ] **Evaluating Scripts (In progress)** - Run validators locally, check execution costs
 
-**🎯 Quick Win:** Build a tested, optimized validator and deploy it to testnet with a full test suite.
+#### Off-Chain Transaction Building
+
+- [ ] **[Transaction Builder](/docs/transaction-builder)** - Build complete Cardano transactions in Scala
+- [ ] **[Building Your First Transaction](/docs/transaction-builder/building-first-transaction)** - Send ADA and native tokens
+- [ ] **[Spending UTxOs](/docs/transaction-builder/spending-utxos)** - Spend from validator scripts
+- [ ] **[Minting & Burning Assets](/docs/transaction-builder/minting-burning-assets)** - Create and burn native tokens
+- [ ] **[Staking & Rewards](/docs/transaction-builder/staking-rewards)** - Register, delegate, and withdraw rewards
+- [ ] **[Governance](/docs/transaction-builder/governance)** - Participate in Cardano governance with DReps
+
+**🎯 Quick Win:** Build a tested, optimized validator and deploy it to testnet with a complete off-chain application that interacts with it.
 </Steps>
 ---
 
