--- a/scalus-site/content/onboarding/for-scala-developers.mdx
+++ b/scalus-site/content/onboarding/for-scala-developers.mdx
@@ -1,6 +1,6 @@
 ---
-title: Scalus for Scala Developers
-description: Learn how Scala developers can build Cardano smart contracts using familiar tools and patterns. From first validator to production deployment in hours.
+title: Scalus for Scala Developers - Build Cardano Smart Contracts with Scala 3
+description: Complete onboarding guide for Scala developers building on Cardano. Learn eUTxO model, write Plutus validators in Scala 3, debug with IntelliJ IDEA, and build production-ready dApps. From first validator to testnet deployment in 2-3 hours.
 sidebarTitle: For Scala Developers
 ---
 
@@ -123,10 +123,19 @@ class MyValidatorTest extends AnyFunSuite with ScalusTest:
 #### Build & Deploy
 
 - [ ] **[Compiling Validators](/docs/smart-contract/compiling)** - Generate UPLC bytecode and contract blueprints
-- [ ] **Evaluating Scripts (In progress) ** - Run validators locally, check execution costs
+- [ ] **Evaluating Scripts (In progress)** - Run validators locally, check execution costs
 - [ ] **[Builtin Functions](/docs/language-guide/builtin-functions)** - Cryptographic operations and blockchain primitives
 
-**🎯 Quick Win:** Deploy a fully tested validator to Cardano testnet with execution cost analysis.
+#### Off-Chain Transaction Building
+
+- [ ] **[Transaction Builder](/docs/transaction-builder)** - Build complete Cardano transactions in Scala
+- [ ] **[Building Your First Transaction](/docs/transaction-builder/building-first-transaction)** - Send ADA and native tokens
+- [ ] **[Spending UTxOs](/docs/transaction-builder/spending-utxos)** - Spend from validator scripts with redeemers
+- [ ] **[Minting & Burning Assets](/docs/transaction-builder/minting-burning-assets)** - Create and manage native tokens
+- [ ] **[Staking & Rewards](/docs/transaction-builder/staking-rewards)** - Stake delegation and reward withdrawal
+- [ ] **[Governance](/docs/transaction-builder/governance)** - DRep registration and voting delegation
+
+**🎯 Quick Win:** Deploy a fully tested validator to Cardano testnet and build a complete off-chain application to interact with it.
 </Steps>
 ---
 
