--- a/scalus-site/content/onboarding/index.mdx
+++ b/scalus-site/content/onboarding/index.mdx
@@ -1,7 +1,7 @@
 ---
 asIndexPage: true
-title: Scalus Onboarding Guides
-description: Choose your learning path to master Scalus. For Cardano developers learning Scala 3, or Scala developers building blockchain smart contracts on Cardano.
+title: Scalus Onboarding Guides - Learn Cardano Development with Scala 3
+description: Choose your learning path to master Scalus development. Structured onboarding guides for Cardano developers learning Scala 3, or Scala developers building blockchain smart contracts and dApps on Cardano. Complete with checklists, time estimates, and curated resources.
 sidebarTitle: Onboarding
 ---
 
@@ -11,20 +11,24 @@ Choose your learning path based on your background. Each guide provides a struct
 
 ## Choose Your Developer Path
 
-import { Cards } from 'nextra/components'
+import { DescriptionCards } from '../../components/DescriptionCards'
 
-<Cards>
-  <Cards.Card
+
+<DescriptionCards>
+  <DescriptionCards.Card
+    icon="⚙️"
     title="For Cardano Developers"
     href="/docs/onboarding/for-cardano-developers"
     description="You know Cardano → Learn Scala and Scalus"
   />
-  <Cards.Card
+  <DescriptionCards.Card
+    icon="🚀"
     title="For Scala Developers"
     href="/docs/onboarding/for-scala-developers"
     description="You know Scala → Learn Cardano blockchain development"
   />
-</Cards>
+</DescriptionCards>
+
 
 ## What to Expect
 
