--- a/scalus-site/content/transaction-builder/building-first-transaction.mdx
+++ b/scalus-site/content/transaction-builder/building-first-transaction.mdx
@@ -163,3 +163,5 @@ The `complete()` method queries the provider for UTxOs at your address and selec
 - **[Payment Methods](/docs/transaction-builder/payment-methods)** - Different ways to send ADA and tokens
 - **[Spending UTxOs](/docs/transaction-builder/spending-utxos)** - Manual input selection and spending from scripts
 - **[Minting & Burning](/docs/transaction-builder/minting-burning-assets)** - Create and destroy native tokens
+- **[Staking & Rewards](/docs/transaction-builder/staking-rewards)** - Register stake keys, delegate to pools, and withdraw rewards
+- **[Governance](/docs/transaction-builder/governance)** - Participate in Cardano governance through DRep delegation
