site: minor SEO updates

--- a/scalus-site/content/transaction-builder/governance.mdx
+++ b/scalus-site/content/transaction-builder/governance.mdx
@@ -6,7 +6,7 @@ sidebarTitle: Governance
 
 import { Callout } from 'nextra/components'
 
-# Cardano Governance 
+# Cardano Governance: Delegate to DRep, Vote
 
 Scalus TxBuilder provides comprehensive support for Cardano's Conway era governance features. ADA holders can participate in on-chain governance by delegating voting power to Delegated Representatives (DReps) or by becoming DReps themselves.
 
