--- a/scalus-site/content/transaction-builder/staking-rewards.mdx
+++ b/scalus-site/content/transaction-builder/staking-rewards.mdx
@@ -1,12 +1,12 @@
 ---
-title: Cardano Staking & Rewards - Register, Delegate & Withdraw Rewards | Scalus
+title: Cardano Staking & Rewards - Register, Delegate & Withdraw Rewards
 description: Complete guide to Cardano staking & rewards operations with Scalus TxBuilder. Learn how to register stake keys, delegate to stake pools, withdraw rewards, and manage staking deposits on Cardano blockchain.
 sidebarTitle: Staking & Rewards
 ---
 
 import { Callout } from 'nextra/components'
 
-# Cardano Staking & Rewards Operations
+# Cardano Staking: Delegate to Stake Pool, Withdraw Rewards
 
 Scalus TxBuilder provides a type-safe API for managing Cardano staking operations. This guide covers the four core staking operations: registering stake keys, delegating to pools, withdrawing rewards, and deregistering stake keys.
 
