docs: update minting and spending documentation for reference scripts usage

--- a/scalus-site/content/offchain-applications/working-with-contract.mdx
+++ b/scalus-site/content/offchain-applications/working-with-contract.mdx
@@ -175,8 +175,7 @@ def unlock(
     recipientAddress: Address
 ): Transaction = {
   TxBuilder(env)
-    .attach(script)
-    .spend(lockedUtxo, redeemer.toData)
+    .spend(lockedUtxo, redeemer.toData, script)
     .payTo(recipientAddress, lockedUtxo.output.value)
     .collaterals(collateralUtxo)
     .changeTo(recipientAddress)
