--- a/scalus-site/content/transaction-builder/index.mdx
+++ b/scalus-site/content/transaction-builder/index.mdx
@@ -34,7 +34,8 @@ val tx = TxBuilder(env)
 
 <Callout type="info">
   TxBuilder is purely functional - each method returns a new instance with updated state, and it's fully immutable.
-  Only `build()` and `complete*()` can throw while evaluating scripts and balancing the transaction.
+  Only `build()` can throw while evaluating scripts and balancing the transaction.
+  The `complete()` method returns a `Future` that may fail with script evaluation or balancing errors.
 </Callout>
 
 ## Automatic Transaction Completion
