--- a/scalus-site/content/transaction-builder/building-first-transaction.mdx
+++ b/scalus-site/content/transaction-builder/building-first-transaction.mdx
@@ -33,18 +33,40 @@ val preview = CardanoInfo(
 
 TxBuilder depends on the general Cardano Info to construct valid transactions.
 
+## Working with Addresses
+
+Scalus provides convenient string interpolators for parsing Cardano bech32 addresses:
+
+```scala copy
+import scalus.cardano.address.Address.{addr, stake}
+import scalus.cardano.address.StakeAddress
+
+// Parse any Cardano address (Shelley, Stake, or Byron)
+val recipient = addr"addr1qx2fxv2umyhttkxyxp8x0dlpdt3k6cwng5pxj3jhsydzer3n0d3vllmyqwsx5wktcd8cc3sq835lu7drv2xwl2wywfgse35a3x"
+val testnet = addr"addr_test1qz2fxv2umyhttkxyxp8x0dlpdt3k6cwng5pxj3jhsydzer3n0d3vllmyqwsx5wktcd8cc3sq835lu7drv2xwl2wywfgs3xyj0d"
+
+// Parse stake addresses specifically (returns StakeAddress type)
+val stakeAddr: StakeAddress = stake"stake1uyehkck0lajq8gr28t9uxnuvgcqrc6070x3k9r8048z8y5gh6ffgw"
+```
+
+These interpolators validate the address format at runtime and throw an exception for invalid addresses.
+
+<Callout type="info">
+    The `addr` interpolator returns `Address` (the base trait), while `stake` returns `StakeAddress` specifically. Use `stake` when you need the more specific type.
+</Callout>
+
 ## Build the Transaction
 
 Use TxBuilder's fluent API to specify inputs, outputs, and change handling:
 
 ```scala copy
-import scalus.cardano.address.Address
+import scalus.cardano.address.Address.addr
 import scalus.cardano.ledger.Value
 
 // Your UTxOs and addresses
 val myUtxo: Utxo = // ... UTxO to spend
-val recipientAddress: Address = // ... recipient's address
-val changeAddress: Address = // ... your change address
+val recipientAddress = addr"addr1qx2fxv2umyhttkxyxp8x0dlpdt3k6cwng5pxj3jhsydzer..."
+val changeAddress = addr"addr1qy..."
 
 val builder = TxBuilder(env)
   .spend(myUtxo)                          // Add input
